Add test for total amount spent by user and update purchase assertion